# Vadi

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: main.yml  tests.yml
src/utils/: console.py  constants.py  helpers.py
src/vadi/: interpreter.py  lexer.py  memory.py  parser.py  py.typed  repl.py  tokens.py  typedef.py
